--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,3 +1,35 @@
-<p>
-  registration works!
-</p>
+<div class="form-error">{{ errorMessage }}</div>
+<form [formGroup]="registrationForm" (submit)="register(registrationForm.value)" >
+  <div class="form-group">
+    <h1>Create an account</h1>
+
+    <mat-form-field>
+      <input matInput placeholder="Enter your First Name" formControlName="firstName">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="Enter your Last Name" formControlName="lastName">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="Enter your email" formControlName="email" required>
+      <mat-error *ngIf="errorMessages.email">{{errorMessages.email}}</mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="Enter your password" formControlName="password" required>
+      <mat-error *ngIf="errorMessages.password">{{errorMessages.password}}</mat-error>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="Enter your birth year" type="number" formControlName="birthYear" required>
+      <mat-error *ngIf="errorMessages.birthYear">{{errorMessages.birthYear}}</mat-error>
+    </mat-form-field>
+
+    <input type="submit" class="button expanded" value="Register" [disabled]="registrationForm.invalid">
+  </div>
+  Have accout? <a [routerLink]="['/sign-in']">Sign in</a>
+</form>
+
+<a [routerLink]="['/app']">app</a>
+<button (click)="signOut()">signOut</button>
