--- a/src/app/components/forgot/forgot.component.html
+++ b/src/app/components/forgot/forgot.component.html
@@ -1,4 +1,15 @@
-<p>
-  forgot works!
-</p>
+<form [formGroup]="forgotForm" (submit)="getPassword(forgotForm.value)">
+  <div class="form-group">
+    <h1>Enter your email</h1>
+    <mat-form-field>
+      <input matInput placeholder="Enter your email" formControlName="email">
+      <mat-error *ngIf="errorMessages.email">{{errorMessages.email}}</mat-error>
+    </mat-form-field>
+
+    <input type="submit" class="button expanded" value="get password" [disabled]="forgotForm.invalid">
+  </div>
+  Have account? <a [routerLink]="['/sign-in']">Sign in</a>
+
+</form>
+
 <router-outlet></router-outlet>
