Add guard in reset password. Add check verify email.

--- a/src/app/components/forgot/forgot.component.html
+++ b/src/app/components/forgot/forgot.component.html
@@ -1,3 +1,5 @@
+<div class="form-error">{{ errorMessage }}</div>
+
 <form [formGroup]="forgotForm" (submit)="getPassword(forgotForm.value)">
   <div class="form-group">
     <h1>Enter your email</h1>
