--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,6 +16,5 @@
   No accout? <a [routerLink]="['/sign-up']">Sign up</a>
   forgot password? <a [routerLink]="['/forgot']">get password</a>
 </form>
-<a [routerLink]="['/app']">app</a>
-<button (click)="signOut()">signOut</button>
+<a [routerLink]="['/app']">app (not work for test)</a>
 
